# LedMusicStudio

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  postbuild.mjs  tailwind.config.js  tsconfig.json  tsconfig.main.json  visualization.html  vite.config.ts
.github/workflows/: gh-pages.yml
electron/: dgram.ts  electron.js  electron.ts  preload.js  preload.ts  serialport.ts
lms_bridge/: Cargo.toml
lms_bridge/bindings/: BaseOutput.ts  BaseOutputConfiguration.ts  ControllerType.ts  DmxControllerConfiguration.ts  DmxControllerData.ts  DmxControllerMessage.ts  DmxOutput.ts  DmxOutputConfiguration.ts  DmxOutputData.ts  Output.ts  OutputConfiguration.ts  RenderedFile.ts  WledControllerConfiguration.ts  WledControllerData.ts  WledControllerMessage.ts  WledOutput.ts  WledOutputConfiguration.ts  WledOutputData.ts  WsMessage.ts
lms_bridge/src/: bridge.rs  dmx_output.rs  main.rs  types.rs  wled_output.rs
lms_bridge/src/controllers/: controller.rs  dmx_controller.rs  mod.rs  wled_controller.rs
src/: App.vue  constants.ts  env.d.ts  globalState.ts  index.css  main.ts  renderer.ts  wasmInterop.ts
src/audio/: AudioPreview.vue  WaveformPart.vue  audio.libraryItem.ts  audio.processor.ts  index.ts  metronome.ts  waveformWorker.ts  workerInstance.ts
src/automation/: AutomationEditor.vue  AutomationPreview.vue  automation.libraryItem.ts  index.ts
src/bridge/: index.ts  types.ts
src/components/: LabelledFormField.vue  LabelledInputText.vue  LoadingDialog.vue  MainToolbar.vue  MarkerLabel.vue  RenderDialog.vue  Settings.vue  Toolbar.vue  UnifiedEditor.vue
src/graph/: GraphEditor.vue  GraphPreview.vue  colors.ts  editor.ts  graph.libraryItem.ts  graphTemplateSync.ts  index.ts  interface-types.ts  styles.css  types.ts
src/main/: index.ts  readme.md  serialport.ts
src/native/: browser.ts  electron.ts  index.ts  types.ts
src/output/: OutputEditor.vue  SelectOutputTypeDialog.vue  base.output.ts  dummy.output.ts  index.ts  output.libraryItem.ts  outputFactory.ts  outputStore.ts  outputTypes.ts
src/pattern/: Note.vue  NoteEditor.vue  PatternPreview.vue  index.ts  pattern.libraryItem.ts  types.ts
src/rust/: Cargo.toml
src/rust/src/: colors.rs  lib.rs  particlenode.rs
src/scripting/: ScriptEditor.vue  index.ts  lib.lmsApi.d.ts  script.libraryItem.ts  theme.ts
src/stage/: StageEditor.vue  StageSettings.vue  StageView.vue  index.ts  ledStrip.ts  stage.libraryItem.ts  stage.ts  stageScene.ts  testscene.json  visualizationWorkerInstance.ts
src/stage_old/: StageEditor.vue  StageSettings.vue  stage.libraryItem.ts
src/styles/: all.scss  (+2 more)
(+232 files in other folders)
