[package]
name = "lms_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serialport = "4.2.0"
ts-rs = "6.2.1"
tungstenite = "0.21.0"

[profile.release]
opt-level = "s"
debug = 0
strip = true
lto = true
