[package]
name = "lms_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.28"
rmp-serde = "1.1.2"
rodio = "0.17.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.96"
serialport = "4.2.0"
ts-rs = "8.1.0"
tungstenite = "0.21.0"

[profile.release]
opt-level = "s"
debug = 0
strip = true
lto = true
