[package]
name = "rust"
version = "0.1.0"
authors = ["newcat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[profile.dev]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen="0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
rand= { version = "0.9.1", features = ["small_rng"] }
palette = "0.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-mutable-globals"]
